// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiPadding returns a static padding value for each size l 1`] = `"24px"`;

exports[`useEuiPadding returns a static padding value for each size m 1`] = `"16px"`;

exports[`useEuiPadding returns a static padding value for each size none 1`] = `null`;

exports[`useEuiPadding returns a static padding value for each size s 1`] = `"8px"`;

exports[`useEuiPadding returns a static padding value for each size xl 1`] = `"32px"`;

exports[`useEuiPadding returns a static padding value for each size xs 1`] = `"4px"`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side bottom 1`] = `
Object {
  "l": "
      padding-block-end: 24px;
    ",
  "m": "
      padding-block-end: 16px;
    ",
  "none": null,
  "s": "
      padding-block-end: 8px;
    ",
  "xl": "
      padding-block-end: 32px;
    ",
  "xs": "
      padding-block-end: 4px;
    ",
}
`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side horizontal 1`] = `
Object {
  "l": "
      padding-inline: 24px;
    ",
  "m": "
      padding-inline: 16px;
    ",
  "none": null,
  "s": "
      padding-inline: 8px;
    ",
  "xl": "
      padding-inline: 32px;
    ",
  "xs": "
      padding-inline: 4px;
    ",
}
`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side left 1`] = `
Object {
  "l": "
      padding-inline-start: 24px;
    ",
  "m": "
      padding-inline-start: 16px;
    ",
  "none": null,
  "s": "
      padding-inline-start: 8px;
    ",
  "xl": "
      padding-inline-start: 32px;
    ",
  "xs": "
      padding-inline-start: 4px;
    ",
}
`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side right 1`] = `
Object {
  "l": "
      padding-inline-end: 24px;
    ",
  "m": "
      padding-inline-end: 16px;
    ",
  "none": null,
  "s": "
      padding-inline-end: 8px;
    ",
  "xl": "
      padding-inline-end: 32px;
    ",
  "xs": "
      padding-inline-end: 4px;
    ",
}
`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side top 1`] = `
Object {
  "l": "
      padding-block-start: 24px;
    ",
  "m": "
      padding-block-start: 16px;
    ",
  "none": null,
  "s": "
      padding-block-start: 8px;
    ",
  "xl": "
      padding-block-start: 32px;
    ",
  "xs": "
      padding-block-start: 4px;
    ",
}
`;

exports[`useEuiPaddingStyles hook returns the object of static background-color properties and each logical side vertical 1`] = `
Object {
  "l": "
      padding-block: 24px;
    ",
  "m": "
      padding-block: 16px;
    ",
  "none": null,
  "s": "
      padding-block: 8px;
    ",
  "xl": "
      padding-block: 32px;
    ",
  "xs": "
      padding-block: 4px;
    ",
}
`;
